--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,15 @@
     flex-wrap: wrap;
 }
 
+h1 {
+    display: inline-block;
+    font-weight: bold;
+}
+
 #start {
     float: right;
     border: none;
-    color: green;
+    color: rgb(0, 0, 0);
     background-color: rgb(235, 228, 228);
     padding: 10px 30px;
     font-size: 24px;
