--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+
 }
 
 h1 {
@@ -48,5 +49,9 @@ header {
 
 .clicked {
     background-color: rgb(5, 245, 245);
+}
+
+main {
+  background-color: rgb(5, 245, 245);
 }
 
