--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,24 @@
 
 }
 
+.img {
+    display: inline-block;
+    height: 35px;
+    width: 35px;
+    vertical-align: middle;
+}
+
 h1 {
     display: inline-block;
     font-weight: bold;
+    vertical-align: middle;
 }
 
 #start {
     float: right;
     border: none;
     color: rgb(0, 0, 0);
-    background-color: rgb(235, 228, 228);
+    background-color: rgb(143, 139, 139);
     padding: 10px 30px;
     font-size: 24px;
     border-radius: 10px;
@@ -30,7 +38,7 @@ h1 {
 
 header {
     padding: 20px 10px;
-    background-color: grey;
+    background-color: white;
     
     height: 100px;
 }
@@ -49,7 +57,7 @@ header {
 }
 
 .clicked {
-    background-color: rgb(5, 245, 245);
+    background-color: blue;
 }
 
 main {
